--- a/Design/No.5/index.css
+++ b/Design/No.5/index.css
@@ -12,16 +12,20 @@
 	top:		50%;
 	left:		50%;
 	transform:	translate(-50%,-50%);
+	-webkit-transform:	translate(-50%,-50%);
 	perspective:	500px;
 }
 
 .cube {
 	position:	relative;
 	transform-style:	preserve-3d;
+	-webkit-transform-style:	preserve-3d;
 	transition:	all 1s;
+	-webkit-transition:	all 1s;
 	height: 500px;
 	width: 500px;
 	transform-origin:	center center -252px;
+	-webkit-transform-origin:	center center -252px;
 }
 
 .side {
@@ -36,24 +40,33 @@
 .side:nth-child(2) {
 	transform-origin:	left;
 	transform:   rotateY(90deg);
+	-webkit-transform-origin:	left;
+	-webkit-transform:   rotateY(90deg);
 }
 
 .side:nth-child(3) {
 	transform-origin:	right;
 	transform:   rotateY(-90deg);
+	-webkit-transform-origin:	right;
+	-webkit-transform:   rotateY(-90deg);
 }
 
 .side:nth-child(4) {
 	transform-origin:	bottom;
-	transform:   rotateX(90deg);	
+	transform:   rotateX(90deg);
+	-webkit-transform-origin:	bottom;
+	-webkit-transform:   rotateX(90deg);		
 }
 
 .side:nth-child(5) {
-	transform:   translateZ(-504px);	
+	transform:   translateZ(-504px);
+	-webkit-transform:   translateZ(-504px);	
 }
 .side:nth-child(6) {
 	transform-origin:	top;
-	transform:   rotateX(-90deg);	
+	transform:   rotateX(-90deg);
+	-webkit-transform-origin:	top;
+	-webkit-transform:   rotateX(-90deg);		
 }
 
 .square {
@@ -63,17 +76,32 @@
 	opacity:	0.2;
 }
 
-@keyframes rotate {
+@keyframes rotating {
 	from {
 		transform:	rotateY(0deg);
+		-webkit-transform:	rotateY(0deg);
 	}
 	to {
 		transform:	rotateY(-360deg);
+		-webkit-transform:	rotateY(-360deg);
 	}
 }
 
+@-webkit-keyframes rotating {
+	from {
+		transform:	rotateY(0deg);
+		-webkit-transform:	rotateY(0deg);
+	}
+	to {
+		transform:	rotateY(-360deg);
+		-webkit-transform:	rotateY(-360deg);
+	}
+}
+
+
 .cube:hover {
-	animation:	rotate 10s linear infinite;
+	animation:	rotating 10s linear infinite;
+	-webkit-animation:	rotating 10s linear infinite;
 }
 
 
