--- a/Design/No.5/index.css
+++ b/Design/No.5/index.css
@@ -14,6 +14,7 @@
 	transform:	translate(-50%,-50%);
 	-webkit-transform:	translate(-50%,-50%);
 	perspective:	500px;
+	-webkit-perspective:	500px;
 }
 
 .cube {
