--- a/Basic/task7/index.css
+++ b/Basic/task7/index.css
@@ -56,8 +56,9 @@ input {
 
 .sliderCon {
 	position:			absolute;
-	top:				260px;
+	top:				245px;
 	right:				-10px;
+	line-height:		30px;
 }
 .sliderCon label {
 	display:			inline-block;
@@ -65,7 +66,6 @@ input {
 	height:				30px;
 	border:				1px solid black;
 	text-align:			center;
-	line-height:		30px;
 	background-color:	white;
 	opacity:			0.5;
 }
@@ -75,14 +75,14 @@ input {
 } */
 
 #activeSli {
-	opacity:			1;
+	opacity:			0.8;
 	height:				40px;
-	transform:			translateY(-10px);
-	-webkit-transform:			translateY(-10px);
-	-o-transform:			translateY(-10px);
-	-moz-transform:			translateY(-10px);
+	line-height:		50px;
 }
 
+.sliderCon label:hover {
+	opacity:			0.8;
+}
 
 
 nav {
